bf- fix mobile navigation overflow on mobile screen size

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,22 @@
 @import './theme.css';
 @import './helpers.css';
 
+
+@media (max-width: 480px) {
+    html {
+        max-width: 100vw;
+        overflow-x: hidden;
+
+    }
+
+    body {
+        overflow-x: hidden;
+        max-width: 100vw;
+    }
+}
+
 .app-container {
+    position: relative;
     background-color: var(--theme-background);
     min-height: 100vh;
     width: 340px;
@@ -11,15 +26,27 @@
     height: auto;
     margin-inline: auto;
     padding-block: 20px 40px;
+    overflow-x: hidden;
+    /* Ensure no horizontal overflow */
+}
 
-
+/* Ensure all child elements do not cause overflow */
+.app-container * {
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .page-container {
     min-height: calc(100vh - var(--header-height) - var(--app-padding-block)*2);
+    overflow-x: hidden;
+    /* Ensure no horizontal overflow */
 }
 
-
+/* Ensure all child elements do not cause overflow */
+.page-container * {
+    max-width: 100%;
+    box-sizing: border-box;
+}
 
 @media (min-width: 480px) {
     .app-container {
