--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -16,6 +16,10 @@ body {
     overflow-x: hidden;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
